# binary_calculator

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
locales/de/: main.ftl
locales/en/: main.ftl
src/: binary_field_widget.rs  dec_formats.rs  decimal_input_widget.rs  hex_formats.rs  language_type.rs  main.rs  messages.rs  numeric_input_widget.rs  settings.rs  theme_type.rs
