[package]
name = "binary_calculator"
version = "0.1.0"
authors = ["Robert Ernst"]
edition = "2021"
description = "Binary Calculator to calculate numbers from bits"
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.4.0"
iced = "0.7.0"
num-format = "0.4.4"
