[package]
name = "binary_calculator"
version = "0.1.0"
authors = ["Robert Ernst"]
edition = "2021"
description = "Binary Calculator to calculate numbers from bits"
categories = ["mathematics"]
repository = "https://github.com/Zeppelin1979/binary_calculator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.4.0"
fluent-templates = "0.8.0"
iced = {version="0.7.0"}
iced_native = "0.8.0"
iced_style = "0.6.0"
image = "0.24.5"
num-format = "0.4.4"
